# Smart-Research-Agent

./: .gitignore  README.md  app.py  pyproject.toml  run.sh  setup.py
draft/: test_grounds.ipynb
instructions/: ENVIRONMENT.md  local_run.sh  local_run_windows.sh
setup/: master_run.sh
src/: config.py  default_config.py  local_main.py  main.py  master_agent.py  master_main.py
src/agents/: search_optimiser.py  searcher.py
src/agents/agent/: agent_properties.py  emailer.py  search.py  search_optimiser.py  searcher.py  writer.py
src/draft/: agent.ipynb
src/functions/: async_functions.py
src/smart_agents/: emailer.py  search_optimiser.py  searcher.py  writer.py
src/smart_agents/tools/: html_formatter.py
src/tool_agents/: html_formatter_tool.py  subject_tool.py
